--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,4 +15,5 @@ bind -r S-Right resize-pane -R 5
 set -g status-fg white
 set -g status-bg colour238
 
-set -g pane-active-border-fg colour119
+set -g pane-border-fg colour238
+set -g pane-active-border-fg colour245
