--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,3 +17,9 @@ set -g status-bg colour238
 
 set -g pane-border-fg colour238
 set -g pane-active-border-fg colour245
+
+# Vim directional keys for switching panes
+bind-key h select-pane -L
+bind-key j select-pane -U
+bind-key k select-pane -D
+bind-key l select-pane -R
