--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,3 +23,6 @@ bind-key h select-pane -L
 bind-key j select-pane -U
 bind-key k select-pane -D
 bind-key l select-pane -R
+
+# Battery info
+set -g status-right "#[fg=colour155]#(pmset -g batt | ~/battery.rb) | #[fg=colour45]%d %b %R"
