--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,4 +25,8 @@ bind-key k select-pane -D
 bind-key l select-pane -R
 
 # Battery info
-set -g status-right "#[fg=colour155]#(pmset -g batt | ~/battery.rb) | #[fg=colour45]%d %b %R"
+#set -g status-right "#[fg=colour155]🔋 #{battery_percentage} | #[fg=colour45]%d %b %R"
+#run-shell ~/tmux-battery/battery.tmux
+
+# Forward ssh agent
+set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
