--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,9 +24,7 @@ bind-key j select-pane -U
 bind-key k select-pane -D
 bind-key l select-pane -R
 
-# Battery info
-#set -g status-right "#[fg=colour155]🔋 #{battery_percentage} | #[fg=colour45]%d %b %R"
-#run-shell ~/tmux-battery/battery.tmux
+set -g status-right "#[fg=colour45]%d %b %R"
 
 # Forward ssh agent
 set-option -g update-environment "SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION"
